samples/_failures_safe/1761213438_7d067a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee296ca1.c: In function ‘main’:
./samples/SAFE/__tmp_ee296ca1.c:153:13: error: expected declaration or statement at end of input
  153 |             process_state(&machine, NULL, 0);
      |             ^~~~~~~~~~~~~
./samples/SAFE/__tmp_ee296ca1.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ee296ca1.c:153:13: error: expected declaration or statement at end of input
